# lsp-glib

./: .gitignore  .uncrustify.cfg  README.md  meson.build  meson_options.txt  version.vala.in
.githooks/: pre-commit
.github/workflows/: vala-format.yml
doc/: lsp-glib.toml.in  meson.build
src/: library.vala  lsp-glib.deps  meson.build
src/gir/: meson.build
src/io/: client.vala  editor.vala  jsonrpc-reply.c  jsonrpc-reply.h  server.vala
src/types/: boxed-types.c  boxed-types.def  callhierarchy.vala  clientcapabilities.vala  codeaction.vala  codelens.vala  command.vala  completion.vala  diagnostic.vala  error.vala  formatting.vala  highlight.vala  hover.vala  initialization.vala  inlayhint.vala  location.vala  markupcontent.vala  message.vala  patch-boxed-gir.py  reference.vala  rename.vala  serialization.vala  servercapabilities.vala  signaturehelp.vala  symbol.vala  textdocument.vala  textedit.vala  trace.vala  workspace.vala  workspaceedit.vala
tests/: meson.build
tests/c/: advanced.c  completion.c  editor.c  meson.build  serialization.c  server.c  test-editor.c  test-editor.h  test-server.c  test-server.h  test-stream.c  test-stream.h  workspace-edit.c
tests/js/: diagnostic.js  meson.build  position.js  server.js  types.js
tests/python/: diagnostic.py  lsp_test_typing.pyi  lsp_typing.pyi  meson.build  position.py  pylsp_analysis.py  server.py  test-stream-support.c  test-stream-support.h  types.py
tests/support/: meson.build  test-stream-support.c  test-stream-support.h
tests/vala/: advanced.vala  client-capabilities.vala  completion.vala  diagnostic.vala  editor.vala  features.vala  initialization.vala  meson.build  position.vala  server-cancellation.vala  server.vala  symbols.vala  test-editor.vala  test-server.vala  test-stream.vala  text-document.vala  workspace-edit.vala
